fixed spacing for article view on mobile

--- a/assets/sass/_mediaqueries.scss
+++ b/assets/sass/_mediaqueries.scss
@@ -35,7 +35,9 @@
 
 @media only screen and (max-width: 400px) {
   .post-title { font-size: 32px; }
-
+  .post-content {
+    margin: 2em 0 0 0;
+  }
   .post-container,
   .post-list {
     margin-right: 15px;
